# Lidar_based_Cone_Detection

./: CMakeLists.txt  README.md  package.xml
docs/: architecture.md  benchmarking.md  clustering.md  clustering_adaptive_dbscan.md  clustering_dbscan.md  clustering_depth.md  clustering_euclidean.md  clustering_grid.md  clustering_hdbscan.md  clustering_string.md  clustering_voxel_cc.md  concurrency_and_parallelism.md  deskewing.md  estimation.md  filtering.md  fusion_integration.md  parameters.md
include/: cone_estimator.hpp  ground_remover.hpp  string_clusterer.hpp
include/clustering/: adaptive_dbscan_clusterer.hpp  clusterer_factory.hpp  clusterer_interface.hpp  dbscan_clusterer.hpp  depth_clusterer.hpp  euclidean_clusterer.hpp  grid_clusterer.hpp  hdbscan_clusterer.hpp  string_clusterer.hpp  voxel_connected_components.hpp
include/estimation/: cone_estimator.hpp  estimator_interface.hpp  model_fitting_estimator.hpp  rule_based_estimator.hpp
include/filtering/: bin_based_ground_remover.hpp  ground_remover_factory.hpp  ground_remover_interface.hpp  patchworkpp_ground_remover.hpp  slope_based_ground_remover.hpp
include/node/: perception_node.hpp  perception_pipeline.hpp  pipeline_config.hpp  visualization_bridge.hpp
include/utils/: clock_aligner.hpp  cluster_logger.hpp  deskew_engine.hpp  deskewer.hpp  imu_interpolator.hpp  performance_profiler.hpp  transform_manager.hpp  types.hpp
launch/: foxglove.launch.py  foxglove_replay.launch.py  production_ready.launch.py
scripts/: analyze_clusters.py  plot_deskew_metrics.py  plot_metrics.py  run_benchmarks.sh
src/: cone_estimator.cpp  ground_remover.cpp  perception_node.cpp  string_clusterer.cpp
src/clustering/: adaptive_dbscan_clusterer.cpp  dbscan_clusterer.cpp  depth_clusterer.cpp  euclidean_clusterer.cpp  grid_clusterer.cpp  hdbscan_clusterer.cpp  string_clusterer.cpp  voxel_connected_components.cpp
src/estimation/: cone_estimator.cpp  model_fitting_estimator.cpp  rule_based_estimator.cpp
src/filtering/: bin_based_ground_remover.cpp  patchworkpp_ground_remover.cpp  slope_based_ground_remover.cpp
src/node/: perception_node.cpp  perception_pipeline.cpp  visualization_bridge.cpp
src/utils/: clock_aligner.cpp  cluster_logger.cpp  deskew_engine.cpp  deskewer.cpp  imu_interpolator.cpp  performance_profiler.cpp  transform_manager.cpp
