<package format="3">
  <name>fs_lidar_perception</name>
  <version>0.0.1</version>
  <description>Formula Student LiDAR Perception (Thesis Implementation)</description>
  <maintainer email="user@fs.com">FS Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
