<package format="3">
  <name>lidar_perception</name>
  <version>0.1.0</version>
  <description>High-performance modular LiDAR perception system for obstacle detection and classification.</description>
  <maintainer email="lore@todo.todo">Lorenzo Fargione</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>patchworkpp</depend>
  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
